gts/GenericTabset Builder/main/default/objects/Contact/fields/LTX_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>LTX_Citizenship__c</fullName>
    <label>Citizenship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>