gts/GenericTabset Builder/main/default/objects/Contact/fields/LTX_CurrentAddress__c.field-meta.xml
<CustomField>
    <fullName>LTX_CurrentAddress__c</fullName>
    <label>Current Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>