gts/GenericTabset Builder/main/default/objects/Contact/fields/LTX_Dependents__c.field-meta.xml
<CustomField>
    <fullName>LTX_Dependents__c</fullName>
    <label>Dependents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>