gts/GenericTabset Builder/main/default/objects/Contact/fields/LTX_Driving_License__c.field-meta.xml
<CustomField>
    <fullName>LTX_Driving_License__c</fullName>
    <label>Driving License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>