gts/GenericTabset Builder/main/default/objects/Contact/fields/LTX_Fathers_Name__c.field-meta.xml
<CustomField>
    <fullName>LTX_Fathers_Name__c</fullName>
    <label>Fathers Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>