gts/GenericTabset Builder/main/default/objects/Contact/fields/LTX_Maritial_Status__c.field-meta.xml
<CustomField>
    <fullName>LTX_Maritial_Status__c</fullName>
    <label>Maritial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Un-Married</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>