gts/GenericTabset Builder/main/default/objects/Contact/fields/LTX_Stay_Duration__c.field-meta.xml
<CustomField>
    <fullName>LTX_Stay_Duration__c</fullName>
    <label>Stay Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>